@@ -1,5 +1,14 @@
 2003-07-11  Jordi Mallach  <jordi@sindominio.net>
 
+	* src/data (window_data): Don't include the function name in the
+	warning message. Fixes bug #117099.
+
+	* src/init.c [toolbar_menu]: Add hints to toolbar items.
+
+	* src/modules.c (do_plugin_information): Improve checkbox label.
+
+2003-07-11  Jordi Mallach  <jordi@sindominio.net>
+
 	* src/init.c (main_window): Fix another string with Commonwealth
 	English (Licence -> License).
 	(window_menu_help_about): Change the copyright symbol to UTF-8 and
